Fix spacing of fighter choices on page

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 70%;
+  margin-bottom: 200px;
 }
 
 .rules-box {
@@ -68,9 +69,15 @@ h3 {
   margin: 0;
 }
 
-.classic-choice, .difficult-choice {
+.token {
+  font-size: 24px;
+  margin-top: 30px;
+}
+
+.fighter-choices {
   height: 130px;
   width: 130px;
+  margin: 24px;
 }
 
 button {
